component-resolver-core/src/test/resources/invalid/escrow_subcomponents/Components.kts
package invalid.escrow

import org.octopusden.octopus.components.registry.api.enums.EscrowGenerationMode
import org.octopusden.octopus.components.registry.dsl.component

component("Component") {
    components {
        component("sub-component-one") {
            escrow {
                generation = EscrowGenerationMode.AUTO
            }
        }
    }
}
